test-suite/tests/roundtrip/invalid/semantic/typecheck/partition/02/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/partition/02/input.essence:4:24:
  |
4 | such that participants(partition({0}) - partition({4})) = {5}
  |                        ^^^^^^^^^^^^^^
Type error:
	Expected: number, set, mset, relation or function
	Got: partition from int

tests/roundtrip/invalid/semantic/typecheck/partition/02/input.essence:4:41:
  |
4 | such that participants(partition({0}) - partition({4})) = {5}
  |                                         ^^^^^^^^^^^^^^
Type error:
	Expected: number, set, mset, relation or function
	Got: partition from int

